--- a/diary/templates/diary/base.html
+++ b/diary/templates/diary/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!doctype html>
 <html lang="ru">
 <head>
@@ -8,20 +9,17 @@
     <title>{% block title %}{% endblock %}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="static/css/bootstrap.min.css">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 <body>
 
 <!--    НАВИГАЦИЯ ВЕЗДЕ ОДИНАКОВАЯ -->
 {% include './block/navbar.html' %}
 
-<!--    СЛАЙДЕР ТОЛЬКО НА ГЛАВНОЙ, ГДЕ-ТО ВМЕСТО НЕГО ПРОСТО ХЭДЭР, А ГДЕ-ТО ЕГО НЕТ -->
-{% block header %}{% endblock %}
-
 <!--    ОСНОВНОЙ БЛОК КОНТЕНТА. ВЕЗДЕ РАЗНОЕ КОЛ-ВО КОЛОНОК -->
 {% block content %}{% endblock %}
 
-<!--    ПАГИНАЦИЯ ГДЕ-ТО ЕСТЬ А ГДЕ-ТО НЕТУ -->
+<!--    ПАГИНАЦИЯ ГДЕ-ТО ЕСТЬ А ГДЕ-ТО НЕТ -->
 {% block pagination %}{% endblock %}
 
 <!--    ФУТЕР ВЕЗДЕ ОДИНАКОВЫЙ -->
@@ -29,6 +27,6 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
-<script src="js/script.js"></script>
+<script src="{% static 'js/script.js' %}"></script>
 </body>
 </html>
