--- a/diary/templates/diary/base.html
+++ b/diary/templates/diary/base.html
@@ -14,7 +14,7 @@
 <body>
 
 <!--    НАВИГАЦИЯ ВЕЗДЕ ОДИНАКОВАЯ -->
-{% include './block/navbar.html' %}
+{% include 'block/navbar.html' %}
 
 <!--    ОСНОВНОЙ БЛОК КОНТЕНТА. ВЕЗДЕ РАЗНОЕ КОЛ-ВО КОЛОНОК -->
 {% block content %}{% endblock %}
@@ -23,7 +23,7 @@
 {% block pagination %}{% endblock %}
 
 <!--    ФУТЕР ВЕЗДЕ ОДИНАКОВЫЙ -->
-{% include './block/footer.html' %}
+{% include 'block/footer.html' %}
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
