--- a/diary/templates/diary/index.html
+++ b/diary/templates/diary/index.html
@@ -7,7 +7,13 @@
 <section class="all-posts">
     <div class="container">
         <h1 class="my-4 text-center">Последние записи в дневнике</h1>
-        {{ posts }}
+        {% for post in posts %}
+        <h2>{{ post.title }}</h2>
+        <p>{{ post.image }}</p>
+        <p>{{ post.content }}</p>
+        <p>{{ post.created_at }}</p>
+        <p>{{ post.author }}</p>
+        {% endfor %}
     </div>
 </section>
 {% endblock %}
