--- a/diary/templates/diary/index.html
+++ b/diary/templates/diary/index.html
@@ -10,7 +10,7 @@
         {% for post in posts %}
         <h2>{{ post.title }}</h2>
         <p>{{ post.image }}</p>
-        <p>{{ post.content }}</p>
+        <p>{{ post.content|safe }}</p>
         <p>{{ post.created_at }}</p>
         <p>{{ post.author }}</p>
         {% endfor %}
