--- a/diary/templates/diary/index.html
+++ b/diary/templates/diary/index.html
@@ -11,11 +11,17 @@
             {% for post in posts %}
             <div class="row">
                 <div class="card mb-2 shadow-sm">
-                    <img src="media/users/{{ post.title }}" class="card-img-top">
-                    <p>{{ post.image }}</p>
-                    <p>{{ post.content|safe|truncatechars:300 }}</p>
-                    <p>{{ post.created_at }}</p>
-                    <p>{{ post.author }}</p>
+                    <img src="media/{{ post.image }}" class="card-img-top">
+                    <div class="card-body">
+                        <h4 class="card_title">{{ post.title }}</h4>
+                        <p class="card-text">{{ post.content|safe|truncatechars:300 }}</p>
+                        <div class="d-flex justify-content-between align-items-center">
+                            <div class="btn-group">
+                                <a href="#" class="btn btn-sm btn-link">Подробнее</a>
+                            </div>
+                            <small class="text-muted">{{ post.created_at }}</small>
+                        </div>
+                    </div>
                 </div>
             </div>
             {% endfor %}
