--- a/diary/templates/diary/index.html
+++ b/diary/templates/diary/index.html
@@ -1,8 +1,8 @@
 {% extends './base.html' %}
 
-{% block title %}Главная страница моего блога{% endblock %}
+{% block title %}Главная страница моего дневника{% endblock %}
 
-
+<!--    КОНТЕНТ -->
 {% block content %}
 <section class="all-posts">
     <div class="container">
@@ -30,19 +30,38 @@
 </section>
 {% endblock %}
 
+
+<!--  ПАГИНАЦИЯ  -->
 {% block pagination %}
-<nav aria-label="Paginate me">
-    <ul class="pagination justify-content-center">
-        <li class="page-item disabled">
-            <a class="page-link" href="#" tabindex="-1">Предыдущая</a>
-        </li>
-        <li class="page-item"><a class="page-link" href="#">1</a></li>
-        <li class="page-item"><a class="page-link" href="#">2</a></li>
-        <li class="page-item"><a class="page-link" href="#">3</a></li>
-        <li class="page-item">
-            <a class="page-link" href="#">Следующая</a>
-        </li>
-    </ul>
-</nav>
-<br>
+    <section class="my-pagination">
+      <nav aria-label="Paginate me">
+        <ul class="pagination justify-content-center">
+            {% if page_obj.has_previous %}
+                <li class="page-item">
+                    <a class="page-link" href="?page={{ page_obj.previous_page_number }}" tabindex="-1">Предыдущая страница</a>
+                </li>
+            {% else %}
+                <li class="page-item disabled">
+                    <a class="page-link" href="#" tabindex="-1">Предыдущая страница</a>
+                </li>
+            {% endif %}
+            {% for page_number in page_obj.paginator.page_range %}
+                {% if page_number == page_obj.number %}
+                    <li class="page-item active"><a class="page-link" href="?page={{ page_number }}">{{ page_number }}</a></li>
+                {% else %}
+                    <li class="page-item"><a class="page-link" href="?page={{ page_number }}">{{ page_number }}</a></li>
+                {% endif %}
+            {% endfor %}
+            {% if page_obj.has_next %}
+                <li class="page-item">
+                    <a class="page-link" href="?page={{ page_obj.next_page_number }}">Следующая страница</a>
+                </li>
+            {% else %}
+                <li class="page-item disabled">
+                    <a class="page-link" href="#">Следующая страница</a>
+                </li>
+            {% endif %}
+        </ul>
+      </nav>
+    </section>
 {% endblock %}
