--- a/diary/templates/diary/index.html
+++ b/diary/templates/diary/index.html
@@ -33,17 +33,18 @@
 
 <!--  ПАГИНАЦИЯ  -->
 {% block pagination %}
-    <section class="my-pagination">
-      <nav aria-label="Paginate me">
+<section class="my-pagination">
+    <nav aria-label="Paginate me">
         <ul class="pagination justify-content-center">
             {% if page_obj.has_previous %}
-                <li class="page-item">
-                    <a class="page-link" href="?page={{ page_obj.previous_page_number }}" tabindex="-1">Предыдущая страница</a>
-                </li>
+            <li class="page-item">
+                <a class="page-link" href="?page={{ page_obj.previous_page_number }}" tabindex="-1">Предыдущая
+                    страница</a>
+            </li>
             {% else %}
-                <li class="page-item disabled">
-                    <a class="page-link" href="#" tabindex="-1">Предыдущая страница</a>
-                </li>
+            <li class="page-item disabled">
+                <a class="page-link" href="#" tabindex="-1">Предыдущая страница</a>
+            </li>
             {% endif %}
             {% for page_number in page_obj.paginator.page_range %}
                 {% if page_number == page_obj.number %}
@@ -53,15 +54,15 @@
                 {% endif %}
             {% endfor %}
             {% if page_obj.has_next %}
-                <li class="page-item">
-                    <a class="page-link" href="?page={{ page_obj.next_page_number }}">Следующая страница</a>
-                </li>
+            <li class="page-item">
+                <a class="page-link" href="?page={{ page_obj.next_page_number }}">Следующая страница</a>
+            </li>
             {% else %}
-                <li class="page-item disabled">
-                    <a class="page-link" href="#">Следующая страница</a>
-                </li>
+            <li class="page-item disabled">
+                <a class="page-link" href="#">Следующая страница</a>
+            </li>
             {% endif %}
         </ul>
-      </nav>
-    </section>
+    </nav>
+</section>
 {% endblock %}
