--- a/diary/templates/diary/index.html
+++ b/diary/templates/diary/index.html
@@ -17,7 +17,7 @@
                         <p class="card-text">{{ post.content|safe|truncatechars:200 }}</p>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
-                                <a href="#" class="btn btn-sm btn-link">Подробнее</a>
+                                <a href="{% url 'diary:detail_post' diary.pk %}" class="btn btn-sm btn-link">Подробнее</a>
                             </div>
                             <small class="text-muted">{{ post.created_at }}</small>
                         </div>
