--- a/diary/templates/diary/post_detail.html
+++ b/diary/templates/diary/post_detail.html
@@ -5,7 +5,7 @@
 
 <!--    КОНТЕНТ -->
 {% block content %}
-<section class="my-post-detail">
+<section class="post-detail">
     <div class="container">
         <div class="row">
             <!--    ЭТО ЛЕВАЯ КОЛОНКА КОНТЕНТА ПОСТА -->
@@ -14,7 +14,7 @@
                 <nav aria-label="breadcrumb" class="my-4">
                     <ol class="breadcrumb">
                         <li class="breadcrumb-item"><a href="/">Главная</a></li>
-                        <li class="breadcrumb-item active" aria-current="page">{{ post.h1 }}</li>
+                        <li class="breadcrumb-item active" aria-current="page">{{ post.title }}</li>
                     </ol>
                 </nav>
                 <!--    ЭТО ТЕЛО ПОСТА -->
