--- a/diary/templates/diary/index.html
+++ b/diary/templates/diary/index.html
@@ -18,7 +18,7 @@
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
                                 <a class="btn btn-sm btn-link"
-                                   href="{% url 'diary:detail_post' diary.pk %}">Подробнее</a>
+                                   href="{% url 'diary:detail_post' post.pk %}">Подробнее</a>
                             </div>
                             <small class="text-muted">{{ post.created_at }}</small>
                         </div>
