--- a/diary/templates/diary/index.html
+++ b/diary/templates/diary/index.html
@@ -17,7 +17,7 @@
                         <p class="card-text">{{ post.content|safe|truncatechars:200 }}</p>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
-                                <a class="btn btn-sm btn-link"
+                                <a class="btn btn-primary"
                                    href="{% url 'diary:detail_post' post.pk %}">Подробнее</a>
                             </div>
                             <small class="text-muted">{{ post.created_at }}</small>
