--- a/diary/templates/diary/post_delete.html
+++ b/diary/templates/diary/post_delete.html
@@ -23,20 +23,22 @@
                 <p class="lead">
                     {{ post.content|safe }}
                 </p>
-                <div class="d-flex justify-content-between align-items-center">
-                    <div class="btn-group">
-                        <a class="btn btn-primary" href="{% url 'diary:delete_post' post.pk %}"
-                           role="button">Редактировать запись</a>
-                        <a class="btn btn-primary" href="{% url 'diary:delete_post' post.pk %}"
-                           role="button">Удалить запись</a>
-                    </div>
-                </div>
                 <hr>
                 <div class="d-flex justify-content-between">
                     <div class="lead">Автор: {{post.author}}</div>
                     <div>Опубликовано: {{post.created_at}}</div>
                 </div>
                 <hr>
+
+                <!-- Форма удаления поста -->
+                <form action="{% url 'diary:delete_post' post.pk %}" method="POST" class="mt-4">
+                    {% csrf_token %}
+                    <div class="alert alert-warning" role="alert">
+                        Вы уверены, что хотите удалить эту статью?
+                    </div>
+                    <button type="submit" class="btn btn-danger">Удалить пост</button>
+                    <a href="{% url 'diary:list_posts' %}" class="btn btn-secondary">Отменить</a>
+                </form>
             </div>
         </div>
     </div>
