--- a/diary/templates/diary/post_detail.html
+++ b/diary/templates/diary/post_detail.html
@@ -25,7 +25,7 @@
                 </p>
                 <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
-                        <a class="btn btn-primary" href="{% url 'diary:delete_post' post.pk %}"
+                        <a class="btn btn-primary" href="{% url 'diary:update_post' post.pk %}"
                            role="button">Редактировать запись</a>
                         <a class="btn btn-primary" href="{% url 'diary:delete_post' post.pk %}"
                            role="button">Удалить запись</a>
