--- a/diary/templates/block/navbar.html
+++ b/diary/templates/block/navbar.html
@@ -9,6 +9,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <div class="navbar-nav me-auto mb-2 mb-lg-0">
                     <a class="nav-link" href="{% url 'diary:list_posts' %}">Главная</a>
+                    <a class="nav-link" href="{% url 'diary:create_post' %}">Сделать новую запись</a>
                 </div>
                 <form class="d-flex" role="search">
                     <input class="form-control me-2" type="search" placeholder="Поиск" aria-label="Поиск">
