--- a/users/templates/users/registration.html
+++ b/users/templates/users/registration.html
@@ -3,55 +3,54 @@
 {% block title %}Регистрация{% endblock %}
 
 {% block content %}
-    <section class="my-registration-form">
-        <div class="container">
-            <div class="row justify-content-center">
-                <div class="col-12">
-                    <!--    ЭТО ХЛЕБНЫЕ КРОШКИ -->
-                    <nav aria-label="breadcrumb" class="my-4">
-                        <ol class="breadcrumb">
-                            <li class="breadcrumb-item"><a href="{% url 'diary:list_posts' %}">Главная</a></li>
-                            <li class="breadcrumb-item active" aria-current="page">Форма регистрации</li>
-                        </ol>
-                    </nav>
+<section class="my-registration-form">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-12">
+                <nav aria-label="breadcrumb" class="my-4">
+                    <ol class="breadcrumb">
+                        <li class="breadcrumb-item"><a href="{% url 'diary:list_posts' %}">Главная</a></li>
+                        <li class="breadcrumb-item active" aria-current="page">Форма регистрации</li>
+                    </ol>
+                </nav>
 
-                    <div class="row justify-content-center">
-                        <div class="col-6">
-                            <p class="lead">Для регистрации укажите имя пользователя и пароль</p>
-                            {% if form.errors %}
-                                {% for field in form %}
-                                    {% for error in field.errors %}
-                                        <div class="alert alert-danger">
-                                            <strong>{{ error|escape }}</strong>
-                                        </div>
-                                {% endfor %}
-                                {% endfor %}
-                                {% for error in form.non_field_errors %}
-                                    <div class="alert alert-danger">
-                                        <strong>{{ error|escape }}</strong>
-                                    </div>
-                                {% endfor %}
-                            {% endif %}
-                                <form method="post" action="{% url 'users:registration' %}">
-                                    {% csrf_token %}
-                                    <div class="mb-3">
-                                        <label for="inputUsername" class="form-label visually-hidden">Имя пользователя</label>
-                                        {{form.username}}
-                                    </div>
-                                    <div class="mb-3">
-                                        <label for="inputPassword" class="form-label visually-hidden">Пароль</label>
-                                        {{form.password}}
-                                    </div>
-                                    <div class="mb-3">
-                                        <label for="ReInputPassword" class="form-label visually-hidden">Повторите пароль</label>
-                                        {{form.repeat_password}}
-                                    </div>
-                                    <button type="submit" class="btn btn-primary">Регистрация</button>
-                                </form>
+                <div class="row justify-content-center">
+                    <div class="col-6">
+                        <p class="lead">Для регистрации укажите имя пользователя и пароль</p>
+                        {% if form.errors %}
+                        <div class="alert alert-danger">
+                            <strong>Исправьте ошибки в форме.</strong>
                         </div>
+                        {% endif %}
+                        <form method="post" action="{% url 'users:registration' %}">
+                            {% csrf_token %}
+                            <div class="mb-3">
+                                <label for="id_username" class="form-label">Имя пользователя</label>
+                                {{ form.username }}
+                                {% for error in form.username.errors %}
+                                <div class="alert alert-danger">{{ error|escape }}</div>
+                                {% endfor %}
+                            </div>
+                            <div class="mb-3">
+                                <label for="id_password" class="form-label">Пароль</label>
+                                {{ form.password }}
+                                {% for error in form.password.errors %}
+                                <div class="alert alert-danger">{{ error|escape }}</div>
+                                {% endfor %}
+                            </div>
+                            <div class="mb-3">
+                                <label for="id_repeat_password" class="form-label">Повторите пароль</label>
+                                {{ form.repeat_password }}
+                                {% for error in form.repeat_password.errors %}
+                                <div class="alert alert-danger">{{ error|escape }}</div>
+                                {% endfor %}
+                            </div>
+                            <button type="submit" class="btn btn-primary">Регистрация</button>
+                        </form>
                     </div>
                 </div>
             </div>
         </div>
-    </section>
+    </div>
+</section>
 {% endblock %}
