--- a/users/templates/users/registration.html
+++ b/users/templates/users/registration.html
@@ -1,6 +1,6 @@
 {% extends 'diary/base.html' %}
 {% load static %}
-{% block title %}Регистрация{% endblock %}
+{% block title %}Регистрация нового пользователя{% endblock %}
 
 {% block content %}
 <section class="my-registration-form">
@@ -16,36 +16,21 @@
 
                 <div class="row justify-content-center">
                     <div class="col-6">
-                        <p class="lead">Для регистрации укажите имя пользователя и пароль</p>
-                        {% if form.errors %}
-                        <div class="alert alert-danger">
-                            <strong>Исправьте ошибки в форме.</strong>
-                        </div>
-                        {% endif %}
+                        <p class="row justify-content-center">Для регистрации пользователя укажите e-mail и пароль</p>
                         <form method="post" action="{% url 'users:registration' %}">
                             {% csrf_token %}
-                            <div class="mb-3">
-                                <label for="id_username" class="form-label">Имя пользователя</label>
-                                {{ form.username }}
-                                {% for error in form.username.errors %}
-                                <div class="alert alert-danger">{{ error|escape }}</div>
-                                {% endfor %}
+                            <div class="d-grid gap-2 col-6 mx-auto mb-4">
+                                {{ form.email }}
                             </div>
-                            <div class="mb-3">
-                                <label for="id_password" class="form-label">Пароль</label>
-                                {{ form.password }}
-                                {% for error in form.password.errors %}
-                                <div class="alert alert-danger">{{ error|escape }}</div>
-                                {% endfor %}
+                            <div class="d-grid gap-2 col-6 mx-auto mb-4">
+                                {{ form.password1 }}
                             </div>
-                            <div class="mb-3">
-                                <label for="id_repeat_password" class="form-label">Повторите пароль</label>
-                                {{ form.repeat_password }}
-                                {% for error in form.repeat_password.errors %}
-                                <div class="alert alert-danger">{{ error|escape }}</div>
-                                {% endfor %}
+                            <div class="d-grid gap-2 col-6 mx-auto mb-4">
+                                {{ form.password2 }}
                             </div>
-                            <button type="submit" class="btn btn-primary">Регистрация</button>
+                            <div class="d-grid gap-2 col-6 mx-auto">
+                                <button type="submit" class="btn btn-primary">Регистрация</button>
+                            </div>
                         </form>
                     </div>
                 </div>
