--- a/diary/templates/block/navbar.html
+++ b/diary/templates/block/navbar.html
@@ -14,7 +14,7 @@
                 <form class="d-flex" role="search">
                     <input class="form-control me-2" type="search" placeholder="Поиск" aria-label="Поиск">
                     <button class="btn btn-outline-success me-2" type="submit">Найти</button>
-                    <button type="button" class="btn btn-outline-light me-2">Вход</button>
+                    <a href="{% url 'users:login' %}" class="btn btn-outline-light me-2">Вход</a>
                     <a href="{% url 'users:registration' %}" class="btn btn-outline-light me-2">Регистрация</a>
                     <button type="button" class="btn btn-outline-light">Выход</button>
                 </form>
