--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -20,12 +20,16 @@
                         <form method="post" action="{% url 'users:login' %}">
                             {% csrf_token %}
                             <div class="d-grid gap-2 col-6 mx-auto mb-4">
-                                {{ form.as_p }}
+                                {{ form.username }}
+                            </div>
+                            <div class="d-grid gap-2 col-6 mx-auto mb-4">
+                                {{ form.password }}
                             </div>
                             <div class="d-grid gap-2 col-6 mx-auto">
                                 <button type="submit" class="btn btn-primary">Войти</button>
                             </div>
                         </form>
+                        <p><a href="{% url 'users:reset_password' %}">Lost password?</a></p>
                     </div>
                 </div>
             </div>
