--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -29,7 +29,9 @@
                                 <button type="submit" class="btn btn-primary">Войти</button>
                             </div>
                         </form>
-                        <p><a href="{% url 'users:reset_password' %}">Lost password?</a></p>
+                        <div class="d-grid gap-2 col-6 mx-auto mb-8">
+                            <p><a href="{% url 'users:reset_password' %}">Забыли пароль?</a></p>
+                        </div>
                     </div>
                 </div>
             </div>
