--- a/users/templates/users/reset_password.html
+++ b/users/templates/users/reset_password.html
@@ -14,31 +14,21 @@
                     </ol>
                 </nav>
 
-                <div class="col-12">
-                    <form class="row" method="post" enctype="multipart/form-data">
-                        <div class="clo-3"></div>
-                        <div class="col-12">
-                            <div class="row">
-                                <div class="col-6">
-                                    <div class="card">
-                                        <div class="card-header">
-                                            <h3 class="card-title">
-                                                Восстановление пароля
-                                            </h3>
-                                        </div>
-                                        <div class="card-body">
-                                            {% csrf_token %}
-                                            {{ form.as_p }}
-                                            <button type="submit" class="btn btn-primary">Сбросить по e-mail</button>
-                                        </div>
-                                    </div>
-                                </div>
+                <div class="row justify-content-center">
+                    <div class="col-6">
+                        <p class="row justify-content-center">Для восстановления пароля укажите e-mail</p>
+                        <form method="post" action="{% url 'users:reset_password' %}">
+                            {% csrf_token %}
+                            {{ form.as_p }}
+                            <div class="d-grid gap-2 col-6 mx-auto mb-4">
+                                <button type="submit" class="btn btn-primary">Сбросить по e-mail</button>
                             </div>
-                        </div>
-                    </form>
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
+    </div>
     </div>
 </section>
 {% endblock %}
