--- a/diary/templates/diary/index.html
+++ b/diary/templates/diary/index.html
@@ -11,7 +11,11 @@
             {% for post in page_obj %}
             <div class="col-">
                 <div class="card mb-2 shadow-sm">
-                    <img src="media/{{ post.image }}" height="250" width="50" class="card-img-top">
+                    <div class="card-body d-flex flex-column flex-md-row">
+                        <!-- Изображение -->
+                        <div class="flex-shrink-0 mr-3">
+                            <img src="media/{{ post.image }}" width="100" height="75" alt="{{ post.title }}" class="rounded img-thumbnail">
+                        </div>
                     <div class="card-body">
                         <h4 class="card_title">{{ post.title }}</h4>
                         <p class="card-text">{{ post.content|safe|truncatechars:200 }}</p>
