--- a/diary/templates/block/navbar.html
+++ b/diary/templates/block/navbar.html
@@ -20,7 +20,7 @@
                 <a href="{% url 'users:logout' %}" class="btn btn-outline-light me-2">Выход</a>
                 {% else %}
                 <a href="{% url 'users:login' %}" class="btn btn-outline-light me-2">Вход</a>
-                <button type="submit" class="btn btn-primary">Зарегистрироваться</button>
+                <a href="{% url 'users:registration' %}" class="btn btn-outline-light me-2">Зарегистрироваться</a>
                 {% endif %}
             </div>
         </div>
