--- a/diary/templates/diary/index.html
+++ b/diary/templates/diary/index.html
@@ -14,24 +14,25 @@
                     <div class="card-body d-flex flex-column flex-md-row">
                         <!-- Изображение -->
                         <div class="flex-shrink-0 mr-3">
-                            <img src="media/{{ post.image }}" width="400" height="250" alt="{{ post.title }}" class="rounded img-thumbnail">
+                            <img src="media/{{ post.image }}" width="400" height="250" alt="{{ post.title }}"
+                                 class="rounded img-thumbnail">
                         </div>
-                    <div class="card-body">
-                        <h4 class="card_title">{{ post.title }}</h4>
-                        <p class="card-text">{{ post.content|safe|truncatechars:200 }}</p>
-                        <div class="d-flex justify-content-between align-items-center">
-                            <div class="btn-group">
-                                <a class="btn btn-primary"
-                                   href="{% url 'diary:detail_post' post.pk %}">Подробнее</a>
+                        <div class="card-body">
+                            <h4 class="card_title">{{ post.title }}</h4>
+                            <p class="card-text">{{ post.content|safe|truncatechars:200 }}</p>
+                            <div class="d-flex justify-content-between align-items-center">
+                                <div class="btn-group">
+                                    <a class="btn btn-primary"
+                                       href="{% url 'diary:detail_post' post.pk %}">Подробнее</a>
+                                </div>
+                                <small class="text-muted">{{ post.created_at }}</small>
                             </div>
-                            <small class="text-muted">{{ post.created_at }}</small>
                         </div>
                     </div>
                 </div>
+                {% endfor %}
             </div>
-            {% endfor %}
         </div>
-    </div>
 </section>
 {% endblock %}
 
