--- a/users/templates/users/user_form.html
+++ b/users/templates/users/user_form.html
@@ -1,26 +1,64 @@
 {% extends 'diary/base.html' %}
 {% load static %}
-{% block title %}Восстановление пароля{% endblock %}
+{% block title %}Профиль пользователя{% endblock %}
 
 {% block content %}
-<section class="my-registration-form">
+<section class="my-profile-section">
     <div class="container">
         <div class="row justify-content-center">
-            <div class="col-12">
-                <nav aria-label="breadcrumb" class="my-4">
+            <div class="col-md-8 col-lg-6">
+                <nav aria-label="breadcrumb" class="mb-4">
                     <ol class="breadcrumb">
                         <li class="breadcrumb-item"><a href="{% url 'diary:list_posts' %}">Главная</a></li>
                         <li class="breadcrumb-item active" aria-current="page">Профиль пользователя</li>
                     </ol>
                 </nav>
 
-                <div class="row justify-content-center">
-                    <div class="col-6">
-                        {% csrf_token %}
-                        {{ form.as_p }}
-                        <div class="btn-group">
-                            <button type="submit" class="btn btn-primary">Сохранить</button>
+                <div class="card profile-card">
+                    <div class="card-body">
+                        <div class="d-flex align-items-start mb-4">
+                            <div class="avatar mr-3">
+                                <img src="media/users/ {{ user.avatar.url }}" alt="Аватар пользователя" class="rounded-circle">
+                            </div>
+                            <div class="flex-grow-1">
+                                <h2 class="h4 mb-2">{{ user.username }}</h2>
+                                <p class="mb-0">{{ user.email }}</p>
+                                <small class="text-muted">Дата регистрации: {{ user.date_joined|date:"d M Y" }}</small>
+                            </div>
                         </div>
+
+                        <hr>
+
+                        <form method="post" novalidate>
+                            {% csrf_token %}
+
+                            <div class="form-group row">
+                                <label for="username" class="col-sm-3 col-form-label">Имя пользователя</label>
+                                <div class="col-sm-9">
+                                    <input type="text" id="username" name="username" value="{{ user.username }}" class="form-control" required>
+                                </div>
+                            </div>
+
+                            <div class="form-group row">
+                                <label for="email" class="col-sm-3 col-form-label">Электронная почта</label>
+                                <div class="col-sm-9">
+                                    <input type="email" id="email" name="email" value="{{ user.email }}" class="form-control" required>
+                                </div>
+                            </div>
+
+                            <div class="form-group row">
+                                <label for="avatar" class="col-sm-3 col-form-label">Аватар</label>
+                                <div class="col-sm-9">
+                                    <input type="file" id="avatar" name="avatar" class="form-control-file">
+                                </div>
+                            </div>
+
+                            <div class="form-group row">
+                                <div class="offset-sm-3 col-sm-9">
+                                    <button type="submit" class="btn btn-primary">Сохранить</button>
+                                </div>
+                            </div>
+                        </form>
                     </div>
                 </div>
             </div>
