--- a/diary/templates/block/navbar.html
+++ b/diary/templates/block/navbar.html
@@ -13,8 +13,8 @@
                     <a class="nav-link" href="{% url 'diary:create_post' %}">Сделать новую запись</a>
                 </div>
 
-                <form class="d-flex" role="search">
-                    <input class="form-control me-2" type="search" placeholder="Поиск" aria-label="Поиск">
+                <form action="{% url 'diary:search' %}" method="get" class="d-flex" role="search">
+                    <input name="q" class="form-control me-2" type="search" placeholder="Поиск" aria-label="Поиск">
                     <button class="btn btn-outline-success me-2" type="submit">Найти</button>
                 </form>
                 <a href="{% url 'users:profile' %}" class="btn btn-outline-light me-2">Профиль</a>
