--- a/diary/templates/diary/search.html
+++ b/diary/templates/diary/search.html
@@ -42,19 +42,19 @@
                 <a class="page-link" href="#" tabindex="-1">Предыдущая страница</a>
             </li>
             {% endif %}
+
             {% for i in results.paginator.page_range %}
             {% if i == results.number %}
             <li class="page-item active">
-                <a class="page-link" href="?page={{ i }}{% if request.GET.q %}&q={{ request.GET.q }}{% endif %}">{{ i
-                    }}</a>
+                <a class="page-link" href="#">{{ i }}</a> <!-- Активная страница не должна быть ссылкой -->
             </li>
             {% else %}
             <li class="page-item">
-                <a class="page-link" href="?page={{ i }}{% if request.GET.q %}&q={{ request.GET.q }}{% endif %}">{{ i
-                    }}</a>
+                <a class="page-link" href="?page={{ i }}{% if request.GET.q %}&q={{ request.GET.q }}{% endif %}">{{ i }}</a>
             </li>
             {% endif %}
             {% endfor %}
+
             {% if results.has_next %}
             <li class="page-item">
                 <a class="page-link"
