--- a/diary/templates/diary/post_create.html
+++ b/diary/templates/diary/post_create.html
@@ -5,29 +5,14 @@
 
 <!--    КОНТЕНТ -->
 {% block content %}
-
 <section class="create-post">
     <div class="container">
         <div class="row">
             <div class="col-lg-8">
                 <h1>Создание новой записи</h1>
-                <form method="POST" enctype="multipart/form-data">
+                <form method="post" enctype="multipart/form-data">
                     {% csrf_token %}
-                    <div class="form-group">
-                        <label for="title">Название</label>
-                        <input type="text" class="form-control" id="title" name="title" required>
-                    </div>
-
-                    <div class="form-group">
-                        <label for="content">Содержание</label>
-                        <textarea class="form-control" id="content" name="content" rows="10" required></textarea>
-                    </div>
-
-                    <div class="form-group">
-                        <label for="image">Изображение</label>
-                        <input type="file" class="form-control-file" id="image" name="image" accept="image/*">
-                    </div>
-
+                    {{ form.as_p }}
                     <button type="submit" class="btn btn-primary">Создать запись</button>
                     <a href="{% url 'diary:list_posts' %}" class="btn btn-secondary">Отмена</a>
                 </form>
