--- a/diary/templates/block/footer.html
+++ b/diary/templates/block/footer.html
@@ -21,7 +21,7 @@ html, body {
     border-top: 2px solid #ccc; /* Граница сверху */
     background-color: #f8f9fa; /* Цвет фона футера */
     padding: 1rem 0; /* Вертикальные отступы футера */
-    text-align: center; /* Центрирование текста */
+    text-align: left; /* Центрирование текста */
     position: relative; /* Фиксируем футер внизу относительно своего родителя */
 }
 
