--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -10,11 +10,11 @@
                 <h1 class="mb-4 text-center">Добро пожаловать!</h1>
                 <nav aria-label="breadcrumb" class="my-4">
                     <ol class="breadcrumb">
-                        <li class="breadcrumb-item active" aria-current="page">Авторизация</li>
+                        <li class="breadcrumb-item active" aria-current="page">Форма авторизации</li>
                     </ol>
                 </nav>
 
-                <div class="card border-0 shadow-sm">
+                <div class="card border-1 shadow-sm">
                     <div class="card-body">
                         <p class="text-center">Для входа введите e-mail и пароль.</p>
                         <form method="post" action="{% url 'users:login' %}">
