--- a/diary/templates/diary/index.html
+++ b/diary/templates/diary/index.html
@@ -6,7 +6,7 @@
 {% block content %}
 <section class="all-posts">
     <div class="container">
-        <h1 class="my-4 text-center">Последние записи в моём дневнике</h1>
+        <h1 class="mt-4 mb-4 text-center"><i>Последние записи в моём дневнике</i></h1>
         <div class="row">
             {% for post in page_obj %}
             <div class="col-">
