--- a/diary/templates/diary/base.html
+++ b/diary/templates/diary/base.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <style>
         body {
-            background-image: url('media/hex-background-networking.jpg');
+            background-image: url('media/');
             background-size: 100% auto; /* Ширина 100%, высота автоматически подстраивается */
             background-position: top left;
             background-clip: padding-box; /* Обрезка фона по границам внутреннего содержимого */
