--- a/diary/templates/block/footer.html
+++ b/diary/templates/block/footer.html
@@ -7,36 +7,40 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <style>
+        /* Устанавливаем минимальную высоту для html и body */
         html, body {
             margin: 0;
             height: 100%;
         }
 
+        /* Основная обёртка для управления расположением контента и футера */
         .wrapper {
             display: flex;
             flex-direction: column;
-            min-height: 100vh;
+            min-height: 100vh; /* Минимальная высота 100% высоты окна */
         }
 
+        /* Главный контент занимает оставшееся пространство */
         .main-content {
-            flex-grow: 1;
-            padding: 20px;
+            flex-grow: 1; /* Это позволит главному контенту занимать все доступное пространство */
+            padding: 20px; /* Отступ внутри основного контента */
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
         }
 
+        /* Настройки для футера */
         .my-footer {
-            height: 40px;
-            border-top: 2px solid #ccc;
-            background-color: #f8f9fa;
-            padding: 10px 0;
-            text-align: left;
+            height: 40px; /* Высота футера */
+            border-top: 2px solid #ccc; /* Граница сверху */
+            background-color: #f8f9fa; /* Цвет фона футера */
+            padding: 10px 0; /* Вертикальный отступ */
+            text-align: left; /* Центрирование текста */
         }
 
         .container {
-            max-width: 1200px;
-            margin: auto;
+            max-width: 1200px; /* Максимальная ширина контейнера */
+            margin: auto; /* Центровка контейнера */
         }
     </style>
 </head>
