--- a/diary/templates/block/footer.html
+++ b/diary/templates/block/footer.html
@@ -57,6 +57,16 @@
                 <div class="col-lg-9 col-sm-12 my-3">
                     <span class="text-body-secondary">&copy; 2025 Личный дневник</span>
                 </div>
+                <div class="col-lg-3 col-sm-12 my-3 d-flex justify-content-end">
+                    <ul class="nav list-unstyled">
+                        <li class=""><a class="text-body-secondary" href="https://t.me/nord_dron_spb">
+                            <svg class="bi" width="24" height="24">
+                                <use xlink:href="#telegram"/>
+                            </svg>
+                        </a></li>
+                        <li class="ms-2"><a class="text-end" href="#">Наверх</a></li>
+                    </ul>
+                </div>
             </div>
         </div>
     </footer>
